--- a/backend/docker/rollerd/Dockerfile
+++ b/backend/docker/rollerd/Dockerfile
@@ -1,9 +1,10 @@
 FROM golang:alpine as builder
 
 ENV GOPATH /go
-ARG GIT_REMOTE_URL=https://github.com/coreroller/coreroller
+ARG GIT_REMOTE_URL=https://github.com/eaware/coreroller
 ARG GIT_BRANCH=master
 WORKDIR /build
+#    && git clone --single-branch --branch ${GIT_BRANCH} ${GIT_REMOTE_URL} \
 
 RUN set -x \
     && apk --no-cache add git curl musl-dev \
@@ -12,7 +13,7 @@ RUN set -x \
     # Switch to https://pkgs.alpinelinux.org/package/edge/testing/x86_64/gb once this is in stable
     && git clone --branch v0.4.4 https://github.com/constabulary/gb /go/src/github.com/constabulary/gb \
     && go get github.com/constabulary/gb/... \
-    && git clone --single-branch --branch ${GIT_BRANCH} ${GIT_REMOTE_URL} \
+    && git clone ${GIT_REMOTE_URL} \
     && cd coreroller/backend \
     && /go/bin/gb build \
     && cp /build/coreroller/backend/bin/rollerd /coreroller
@@ -20,7 +21,7 @@ RUN set -x \
 FROM node:9-alpine as assets
 WORKDIR /build
 
-ARG GIT_REMOTE_URL=https://github.com/coreroller/coreroller
+ARG GIT_REMOTE_URL=https://github.com/eaware/coreroller
 ARG GIT_BRANCH=master
 
 RUN apk --no-cache add git \
